--- a/surveyForm.html
+++ b/surveyForm.html
@@ -11,24 +11,24 @@
 <body>
     <h1 id="title"> freeCodeCamp Survey Form
     </h1>
-    <h3 id="description"><em> Thank you for taking the time to help us improve the platform</em></h3>
+    <p id="description"><em> Thank you for taking the time to help us improve the platform</em></p>
 
     <form id="survey-form" class="form">
         <div class="form__content">
             <label for="name" id="name-label">Name <br />
-        <input type="text" id="name" placeholder="Enter your name">
+        <input type="text" id="name" placeholder="Enter your name" required>
       </label>
 
             <label for="email" id="email-label"> Email <br />
-        <input type="email" id="email" placeholder="Enter your Email">
+        <input type="email" id="email" placeholder="Enter your Email" required>
       </label>
 
             <label for="age" id="number-label"> Age <span class="smaller-text"> (optional) </span><br />
-        <input type="number" id="age" placeholder="Age">
+        <input type="number" id="number" placeholder="Age" min="18" max="99">
       </label>
 
-            <label for="dropdown-role" id="dropdown-role-label"> Which option best describes your current role?<br />
-        <select name="dropdown-role" id="dropdown-role">
+            <label for="dropdown" id="dropdown-role-label"> Which option best describes your current role?<br />
+        <select name="dropdown-role" id="dropdown">
           <option value="">--Select current role--</option>
           <option value="student">Student</option>
           <option value="job">Full Time Job</option>
